[project]
name = "rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.26",
    "langchain-qdrant>=0.2.0",
    "pathlib>=1.0.1",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
